# app

./: .gitignore  .oxlintignore  .prettierignore  README.md  TODO.md  electron-builder.json  index.html  oxlintrc.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.app.json  vite.config.ts
.agent/rules/: workspace-info.md
.husky/: pre-commit
.trae/rules/: workspace-info.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIO_TRANSCRIPTION.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  FEATURES.md  GETTING_STARTED.md  IPC_REFERENCE.md
python/: .dockerignore  AUDIO_API.md  Dockerfile  a.py  constants.py  docker-compose.yml  image.py  logger.py  main.py  notebook.ipynb  pdf.py  pyproject.toml  text.py  web_search.py
python/routes/: __init__.py  audio_route.py  automation_route.py  image_route.py  text_route.py  web_search_route.py
searxng/: run-searxng.sh
searxng/config/: settings.yml
src/: vite-env.d.ts
src/common/: constants.ts  log.ts  types.ts
src/electron/: get-folder.ts  ipcHandlers.ts  main.ts  preload.ts  strings.ts  tsconfig.json  tsconfig.preload.json  utils.ts
src/electron/automation/: basic-handlers.ts  cancel.ts  entry.ts  execute.ts  llm-helpers.ts  orchestrator-handlers.ts  prompts.ts  route.ts  types.ts  utils.ts  vision-handlers.ts
src/electron/common/: types.ts
src/electron/embeddingsDB/: imageEmbeddings.ts  (+3 more)
src/python/: image.py  text.py
src/renderer/: App.tsx  index.css  main.tsx  vite-env.d.ts
whisper/: Cargo.toml  Makefile  USAGE.md  test_transcribe.py
whisper/src/: audio.rs  cli.rs  main.rs  server.rs  transcriber.rs
(+186 files in other folders)
