[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "chromadb>=1.0.20",
  "fastapi>=0.116.1",
  "open-clip-torch>=3.1.0",
  "pillow>=11.3.0",
  "pillow-heif>=1.1.0",
  "pylint>=3.3.8",
  "sentence-transformers>=5.1.0",
  "uvicorn>=0.35.0",
  "pymupdf>=1.24.10",
  "colorama>=0.4.6",
  "ipykernel>=6.30.1",
  "ipywidgets>=8.1.7",
  "pdf2image>=1.17.0",
  "crawl4ai>=0.7.8",
]
